[package]
name = "substrate-trie-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git" }
hex-literal = "0.4.1"