[package]
name = "substrate-trie-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git" }
hex-literal = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
hex = "0.4.3"
parity-scale-codec = "3.6.9"